--- a/pre.tex
+++ b/pre.tex
@@ -29,7 +29,7 @@
 \maketitle
 
 \begin{frame}
-    This template is a secondary creation of \hrefcol{https://www.overleaf.com/latex/templates/sintef-presentation/jhbhdffczpnx}{SINTEF Presentation} template from \hrefcol{mailto:qilong-kirov.liu@connect.polyu.hk}{LIU Qi-long (Kirov)} \vspace{\baselineskip}
+    This template is a secondary creation of \hrefcol{https://github.com/FangWHao/THU-beamer-template}{THU beamer template} from \hrefcol{https://github.com/FangWHao}{Wenhao Fang} \vspace{\baselineskip}
 
     Following is a brief introduction modified from the one written by \hrefcol{mailto:federico.zenith@sintef.no}{Federico Zenith} about how to use \LaTeX\ and beamer to prepare slides. All rights reserved by him.\vspace{\baselineskip}
 
