--- a/pre.tex
+++ b/pre.tex
@@ -21,7 +21,7 @@
 \subtitle{Using \LaTeX\ to prepare slides}
 \author{\href{https://github.com/johnsmith0x3f}{johnsmith0x3f}}
 \date{Nov. 2023}
-\titlebackground*{images/background2}
+\titlebackground*{images/background}
 
 % document body
 \begin{document}
